# sokol-cmake

./: .gitignore  CMakeLists.txt  HandmadeMath.h  README.md  app.c
cmake/: shd.cmake  sokol.cmake
examples/: CMakeLists.txt  cube.c  cube.glsl  cube.glsl.h  simple.c  triangle.c
src/: rx_dx12.c  rx_dx12.h  rx_internal.h  rx_renderer.c  rx_renderer.h  vk_enum_string_helper.h
